2009-02-13  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Released 0.3.12
	* configure.ac: 0.3.12

2009-02-13  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-bookmark-shortcut.c: Use RGBA window, update to new theme.

	* src/hd-task-shortcut.c: Use RGBA window.

2009-02-12  Adam Endrodi <ext-adam.endrodi@nokia.com>

	Replay persistent notifications when starting up.
	NB#99955

	* src/hildon-home.c:
	  Load the persistent notifications after initialization complete.
	* src/hd-marshal.list
	* src/hd-notification-manager.h:
	  Export hd_notification_manager_db_load() for hildon-home.c.
	* src/hd-notification-manager.c:
	  Emit "notified" when a persistent notification is loaded.
	  Changed the signature of the "notify" signal to allow for
	  distinguishing notifications being just loaded from the database.
	* src/hd-incoming-events.c:
	  Do not show preview for replayed notifications nor distribute them
	  among the notification plugins.
	  Added add_switcher_notification() for common code.
	  Fixed a crasher caused by not duplicating the key when we add
	  the "persistent" hint to a HDNotification.
	* src/hd-system-notifications.c:
	  Ignore replayed notifications as system notifications cannot be
	  persistently stored.
	* src/test-incoming-event.c:
	  Use hildon_init() and a longer summery text to see
	  if it's properly clipped in tasw.

2009-02-11  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Released 0.3.11
	* configure.ac: 0.3.11

2009-02-11  Adam Endrodi <ext-adam.endrodi@nokia.com>

	* src/hd-incoming-events.c (hd_incoming_events_get):
	  Typo fix that prevented the HdIncomingEvents singleton from ever
	  being created.

2009-02-10  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Released 0.3.10
	* configure.ac: 0.3.10

2009-02-09  Jan Arne Petersen  <jpetersen@openismus.com>

	* debian/changelog: Add some more fixed bugs.

2009-02-09  Jan Arne Petersen  <jpetersen@openismus.com>

	* Makefile.am:
	* debian/hildon-home.install: